crates/squawk_parser/src/snapshots/parser__test__discard_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/discard.sql
---
SOURCE_FILE
  COMMENT "-- pg_docs"
  WHITESPACE "\n"
  DISCARD_STMT
    DISCARD_KW "DISCARD"
    WHITESPACE " "
    ALL_KW "ALL"
  SEMICOLON ";"
  WHITESPACE "\n"
  DISCARD_STMT
    DISCARD_KW "DISCARD"
    WHITESPACE " "
    PLANS_KW "PLANS"
  SEMICOLON ";"
  WHITESPACE "\n"
  DISCARD_STMT
    DISCARD_KW "DISCARD"
    WHITESPACE " "
    SEQUENCES_KW "SEQUENCES"
  SEMICOLON ";"
  WHITESPACE "\n"
  DISCARD_STMT
    DISCARD_KW "DISCARD"
    WHITESPACE " "
    TEMPORARY_KW "TEMPORARY"
  SEMICOLON ";"
  WHITESPACE "\n"
  DISCARD_STMT
    DISCARD_KW "DISCARD"
    WHITESPACE " "
    TEMP_KW "TEMP"
  SEMICOLON ";"
  WHITESPACE "\n\n"
