crates/squawk_parser/src/snapshots/parser__test__do_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/do.sql
---
SOURCE_FILE
  COMMENT "-- pg_docs"
  WHITESPACE "\n"
  DO_STMT
    DO_KW "DO"
    WHITESPACE " "
    LITERAL
      DOLLAR_QUOTED_STRING "$$DECLARE r record;\nBEGIN\n    FOR r IN SELECT table_schema, table_name FROM information_schema.tables\n             WHERE table_type = 'VIEW' AND table_schema = 'public'\n    LOOP\n        EXECUTE 'GRANT ALL ON ' || quote_ident(r.table_schema) || '.' || quote_ident(r.table_name) || ' TO webuser';\n    END LOOP;\nEND$$"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- do_with_language"
  WHITESPACE "\n"
  DO_STMT
    DO_KW "do"
    WHITESPACE " "
    LANGUAGE_KW "language"
    WHITESPACE " "
    IDENT "plpgsql"
    WHITESPACE " "
    LITERAL
      STRING "'select 1'"
  SEMICOLON ";"
  WHITESPACE "\n\n"
